[package]
name = "ntex-mqtt"
version = "0.6.23"
authors = ["ntex contributors <team@ntex.rs>"]
description = "MQTT Client/Server framework for v5 and v3.1.1,v3.1 protocols"
documentation = "https://docs.rs/ntex-mqtt"
repository = "https://github.com/ntex-rs/ntex-mqtt.git"
categories = ["network-programming"]
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2021"

[dependencies]
ntex = { git = "https://github.com/rmqtt/ntex.git", branch = "0.3.22" }
#ntex = { path = "../ntex/ntex" }
bitflags = "2.6"
derive_more = "0.99"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
pin-project-lite = "0.2"
dequemap = "0.2"
ahash = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.19"

[dev-dependencies]
tokio-tungstenite = { version = "0.23" }
env_logger = "0.11"
futures = "0.3"
rustls = "0.23"
tokio-rustls = "0.26"
#openssl = "0.10"
#tokio-openssl = "0.6"
ntex = { git = "https://github.com/rmqtt/ntex.git", branch = "0.3.22", features = ["rustls"] }
#ntex = { path = "../ntex/ntex" }
rustls-pemfile = "2"
